== NEXT VERSION IN PROGRESS

* Moved OCHamcrest away from Objective-C++, so there's no need for projects to set "-lstdc++" in "Other Linker Flags".
* Deprecated C++ template function boxNumber.


== Version 1.7 ==

20 Feb 2011
* New matchers:
  - "conformsToProtocol" matches objects that conform to a given protocol. Thanks to: Todd Farrell

* Improved matchers:
  - "hasProperty" now works for methods with primitive return types. Thanks to: Christopher Pickslay

* Other improvements:
  - Rewrote introductory sections of documentation.


== Version 1.6 ==

27 Sep 2011
* New matchers:
  - "hasProperty" matches the return value of a method with a given name. (It could be a property, but really can be any method with no arguments that returns an object.) Thanks to: Justin Shacklette

* Improvements:
  - Rewrote documentation.
  - Matchers that require a nil-terminated list now generate a compiler error if you don't have nil at the end.

* Fixes:
  - "stringContainsInOrder" was missing from the master header; now it's there.


== Version 1.5 ==

29 Apr 2011
* Fixed crash when trying to describe an object with nil description.

* Packaging:
 -  Updated project to Xcode 4. iOS framework / documentation / distribution scripts are now external, run from command-line instead of Xcode.
 - Improved documentation by adding Factory headings pointing from implementing classes back to their factories.

* New matcher:
 - "stringContainsInOrder" matches string containing given list of substrings, in order.

* Improved matchers:
 - Changed "sameInstance" mismatch description to omit address when describing nil.
 - For consistency, changed "anyOf" and "allOf" to implicitly wrap non-matcher values in equalTo.


== Version 1.4 ==

13 Feb 2011
* New matchers:
 - "hasEntries" matches dictionary containing key-value pairs satisfying a given list of alternating keys and value matchers.
