@@ -33,15 +33,6 @@
  */
 - (id<HCDescription>)appendDescriptionOf:(id)value;
 
-/**
-    Appends an arbitary value to the description.
-    
-    @b Deprecated: Call @ref appendDescriptionOf: instead.
-
-    @return @c self, for chaining.
- */
-- (id<HCDescription>)appendValue:(id)value     __attribute__((deprecated));
-
 /** 
     Appends a list of objects to the description.
     
